// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter-parser parses createdAt & fullText 1`] = `
Array [
  Object {
    "type": "fullText",
  },
  Object {
    "property": "createdAt",
    "type": "date",
  },
  Object {
    "property": "isApproved",
    "type": "bool",
  },
]
`;

exports[`filter-parser parses custom filters 1`] = `
Array [
  Object {
    "property": "text",
    "type": "input",
  },
  Object {
    "property": "createdAt",
    "type": "date",
  },
  Object {
    "property": "partner__companyName",
    "type": "input",
  },
  Object {
    "enum": Object {
      "ERROR": 4,
      "INFO": 1,
      "NOTICE": 2,
      "WARNING": 3,
    },
    "property": "severity",
    "type": "enum",
  },
  Object {
    "endpoint": "/api/trainers",
    "labelKey": "username",
    "property": "progress__trainer",
    "type": "entity_dropdown",
  },
  Object {
    "property": "rating__rating",
    "type": "range",
  },
]
`;

exports[`filter-parser parses fullText only 1`] = `
Array [
  Object {
    "type": "fullText",
  },
]
`;
